Add surf client, add useMintStage hook

--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -22,6 +22,7 @@
     "@rainbow-me/rainbowkit": "2.1.6",
     "@tanstack/react-query": "^5.56.2",
     "@telegram-apps/bridge": "^1.2.1",
+    "@thalalabs/surf": "^1.7.3",
     "aptos": "^1.21.0",
     "blo": "^1.2.0",
     "daisyui": "4.12.10",
