--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write . '!(node_modules|.next|modules)/**/*'",
     "check-types": "tsc --noEmit --incremental",
     "vercel": "vercel",
-    "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
+    "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true",
+    "reveal": "tsx scripts/reveal.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/js-yaml": "4.0.9",
     "@types/node": "^17.0.45",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.5",
@@ -61,6 +63,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.11",
+    "tsx": "4.19.2",
     "type-fest": "^4.26.1",
     "typescript": "5.6.2",
     "vercel": "^32.7.2"
