Fix title & description

--- a/packages/nextjs/public/manifest.json
+++ b/packages/nextjs/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Scaffold Move DApp",
-  "description": "A DApp built with Scaffold Move",
+  "name": "Gorilla Moverz Community Collection",
+  "description": "The most gorillish community collection on Movement",
   "iconPath": "logo.png"
 }
