--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -12,7 +12,7 @@
     "check-types": "tsc --noEmit --incremental",
     "vercel": "vercel",
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true",
-    "reveal": "tsx scripts/reveal.ts"
+    "setup": "tsx scripts/setup.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
