--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,8 +16,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
-    "@aptos-labs/wallet-adapter-ant-design": "^3.0.13",
-    "@aptos-labs/wallet-adapter-react": "^3.6.2",
+    "@aptos-labs/wallet-adapter-react": "3.7.8",
     "@heroicons/react": "^2.1.5",
     "@mizuwallet-sdk/core": "^1.3.2",
     "@rainbow-me/rainbowkit": "2.1.6",
@@ -30,10 +29,12 @@
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "kubo-rpc-client": "^5.0.2",
+    "lucide-react": "^0.475.0",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "qrcode.react": "^3.2.0",
+    "radix-ui": "^1.1.3",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
